[package]
name = "devol-accounts-kit"
version = "0.0.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = '0.5.1'
solana-sdk = { version = '^1.18.3', optional = true }
solana-client = { version = '^1.18.3', optional = true }
pyth-sdk-solana = "^0.10.1"
solana-program = '^1.18.3'
cfg-if = "^1.0.0"
thiserror = "^1.0.56"
strum = "^0.26.2"
strum_macros = "^0.26.2"

[features]
default = ["solana-sdk", "solana-client"]
on-chain = []