[package]
name = "devol-accounts-kit"
version = "0.2.15"
edition = "2021"
authors = ["DeVol Network"]
homepage = "https://sdk.devol.network"
repository = "https://github.com/DeVol-Network/devol-accounts-kit"
description = "SDK for interacting with the DeVol Network option trading platform on the Solana blockchain"
license = "Apache-2.0"

[dependencies]
bs58 = '0.5.1'
solana-sdk = { version = '^1.18.3', optional = true }
solana-client = { version = '^1.18.3', optional = true }
pyth-sdk-solana = "^0.10.1"
solana-program = '^1.18.3'
cfg-if = "^1.0.0"
thiserror = "^1.0.56"
strum = "^0.26.2"
strum_macros = "^0.26.2"
serde = { version = "^1.0.136", features = ["derive"] }
async-trait = "0.1.80"
tokio = { version = "1.30.0", optional = true }

[features]
default = ["solana-sdk", "solana-client", "tokio"]
on-chain = []